fix title margin on mobile

--- a/theme/css/niccolo.css
+++ b/theme/css/niccolo.css
@@ -21,7 +21,7 @@ a {
 
 #title {
     text-align: center;
-    margin-top: : 1em;
+    margin-top: 1em;
     margin-bottom: 1em;
 }
 
